--- a/index.css
+++ b/index.css
@@ -277,8 +277,6 @@ footer .social-icons a:hover {
 }
 
 #navbar { 
-    /* position: sticky;
-    top: 0; */
     overflow: hidden;
     background: linear-gradient(to right, #1c1c1d, #000408);
     box-shadow: 5px 0 5px #000408;
@@ -388,27 +386,6 @@ form .form-control::placeholder {
     transition: opacity 0.3s ease-in-out;
 }
 
-
-@media (max-width: 768px) {
-    header {
-        padding: 20px;
-    }
-
-    .navbar-nav {
-        text-align: center;
-    }
-
-    .card {
-        margin-bottom: 20px;
-    }
-}
-
-@media (min-width: 1024px) {
-    .hero-section{
-        background-attachment: fixed;
-    }
-}
-
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -472,4 +449,75 @@ button:hover,
 button:focus { 
     border-color: var(--hover);
     color: #fff;
+}
+
+@media (max-width: 768px) {
+    header {
+        padding: 20px;
+    }
+
+    .navbar-nav {
+        text-align: center;
+    }
+
+    h1.heading, .hero-section h1 {
+        font-size: 2.2rem; 
+    }
+
+    h2, #expertise h2 {
+        font-size: 1.5rem;
+    }
+
+    p, #about p, #contact p, #expertise p {
+        font-size: 1rem; 
+        line-height: 1.5;
+    }
+
+    .project-box .card {
+        height: auto; 
+        padding: 20px;
+    }
+
+    .project-box .card img {
+        max-width: 100%; 
+        height: auto;
+    }
+
+    ul {
+        padding-left: 20px; 
+        margin-bottom: 20px; 
+    }
+
+    li {
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 480px) {
+    h1.heading, .hero-section h1 {
+        font-size: 1.8rem;
+    }
+
+    p, #about p, #contact p, #expertise p, .hero-section p {
+        font-size: 0.9rem;
+    }
+
+    .navbar-nav .nav-link {
+        font-size: medium; 
+    }
+}
+
+/* Additional Tweaks for Large Screens */
+@media (min-width: 1440px) {
+    .project-box {
+        margin-bottom: 15rem; 
+    }
+
+    .hero-section h1 {
+        font-size: 5rem;
+    }
+
+    .hero-section p {
+        font-size: 2rem; 
+    }
 }
