--- a/index.css
+++ b/index.css
@@ -495,6 +495,11 @@ button:focus {
     li {
         font-size: 0.9rem;
     }
+
+    #svg {
+        width: 25;
+        height: 25;
+    }
 }
 
 @media (max-width: 480px) {
@@ -508,6 +513,11 @@ button:focus {
 
     .navbar-nav .nav-link {
         font-size: medium; 
+    }
+
+    #svg {
+        width: 20;
+        height: 20;
     }
 }
 
