--- a/index.css
+++ b/index.css
@@ -128,6 +128,11 @@ section {
     border: none;
 }
 
+#svg {
+    width: 40px;
+    height: 40px;
+}
+
 .row {
     display: flex;
     flex-wrap: wrap; /* Allow items to wrap for responsiveness */
@@ -497,8 +502,8 @@ button:focus {
     }
 
     #svg {
-        width: 25;
-        height: 25;
+        width: 20px;
+        height: 20px;
     }
 }
 
