--- a/index.css
+++ b/index.css
@@ -521,8 +521,8 @@ button:focus {
     }
 
     #svg {
-        width: 20;
-        height: 20;
+        width: 20px;
+        height: 20px;
     }
 }
 
